# qproc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  index.html
.github/workflows/: c-cpp.yml
assembly/: Makefile  globals.asm  puts.asm  qos.asm  restart.asm  shell.asm  strcmp.asm  syscall.asm
include/: arena.h  qproc.h  util.h
include/qas/: as_lexer.h  assembler.h  qas.h
include/qcc/: cc_compiler.h  cc_lexer.h  qcc.h
include/qvm/: endian.h  instructions.h  opcodes.h  qvm.h  registers.h  vm.h
src/: arena.c  fs.cc  fs.h  result.h  result.hpp  util.c  util.cc  util.h
src/qas/: as_lexer.c  as_lexer.h  assembler.c  assembler.cc  assembler.h  qas.c  qas.cc  qas.h
src/qcc/: block.c  cc_compiler.c  cc_lexer.c  expr.c  funcdef.c  qcc.c
src/qvm/: bytearray.h  endian.c  endian.h  instructions.c  instructions.h  opcodes.h  qvm.c  qvm.cc  qvm.h  register.h  registers.h  vm.c  vm.cc  vm.h
src/qvm/inst/: add.cc  add.h  call.cc  call.h  cmp.cc  cmp.h  instruction.h  jmp.cc  jmp.h  lod.cc  lod.h  lod_byte.cc  lod_byte.h  lod_dword.cc  lod_dword.h  lod_word.cc  lod_word.h  mov.cc  mov.h  opcodes.h  pop.cc  pop.h  push.cc  push.h  reg_operands.h  str.cc  str.h  sub.cc  sub.h
test/: Makefile  a.asm  a.s  quine.asm
web/: index.html  web.c
web_dist/: index.html  web.js  web.wasm
